--- a/index.html
+++ b/index.html
@@ -1,147 +1,3 @@
-<!DOCTYPE html>
-
-<html lang="en">
-<head>
-<meta charset="utf-8"/>
-<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>LLM Editable Webpage</title>
-<style>
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            line-height: 1.6;
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 20px;
-        }
-
-        #prompt-form {
-            background-color: #f8f9fa;
-            border-radius: 8px;
-            padding: 20px;
-            margin-bottom: 30px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-            border: 1px solid #e9ecef;
-        }
-
-        #prompt-form h2 {
-            margin-top: 0;
-            color: #FF0000; /* Red */
-        }
-
-        #prompt-form input[type="text"] {
-            width: 75%;
-            padding: 10px;
-            margin-right: 10px;
-            border: 1px solid #ced4da;
-            border-radius: 4px;
-            font-size: 16px;
-        }
-
-        #prompt-form button {
-            padding: 10px 15px;
-            background-color: #0366d6;
-            color: white;
-            border: none;
-            border-radius: 4px;
-            font-size: 16px;
-            cursor: pointer;
-            transition: background-color 0.2s;
-        }
-
-        #prompt-form button:hover {
-            background-color: #0056b3;
-        }
-
-        #prompt-form .note {
-            font-size: 14px;
-            color: #FFA500; /* Orange */
-            margin-top: 10px;
-        }
-
-        .content {
-            background-color: white;
-            border-radius: 8px;
-            padding: 30px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        }
-
-        h1 {
-            color: #FFFF00; /* Yellow */
-            border-bottom: 2px solid #e9ecef;
-            padding-bottom: 10px;
-        }
-
-        h2 {
-            color: #008000; /* Green */
-        }
-
-        footer {
-            text-align: center;
-            margin-top: 50px;
-            padding: 20px;
-            background-color: #f8f9fa;
-            border-top: 1px solid #e9ecef;
-            color: #4682B4; /* SteelBlue */
-        }
-
-        p {
-            color: #4B0082; /* Indigo */
-        }
-
-        li {
-            color: #800080; /* Purple */
-        }
-
-        strong {
-            color: #D2691E; /* Chocolate */
-        }
-
-        ol {
-            color: #2F4F4F; /* DarkSlateGray */
-        }
-        ul {
-            color: #8B4513; /* SaddleBrown */
-        }
-
-    </style>
-</head>
-<body><form action="https://github.com/mnaei/PromptPlace2/issues/new" method="get" style="background-color: #f8f9fa;
-            border-radius: 8px;
-            padding: 20px;
-            margin-bottom: 30px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-            border: 1px solid #e9ecef;" target="_blank">
-<input name="labels" type="hidden" value="prompt"/>
-<input name="body" placeholder="Enter your instructions to change this webpage..." required="" type="text"/>
-<button type="submit">Submit</button>
-</form>
-<div id="prompt-form">
-<h2 style="color: #FF0000;">Modify This Webpage</h2>
-<p class="note" style="color: #FFA500;">Your request will be processed through GitHub Issues and applied automatically.</p>
-</div>
-<div class="content">
-<h1 style="color: #FFFF00;">Welcome to the LLM Editable Webpage</h1>
-<p style="color: #4B0082;">This webpage can be modified using natural language instructions. Simply enter your request in the form above, and our system will use the Gemini API to automatically update this page based on your instructions.</p>
-<h2 style="color: #008000;">How It Works</h2>
-<ol style="color: #2F4F4F;">
-<li style="color: #800080;">Enter your instructions in the text box above</li>
-<li style="color: #800080;">Click "Submit" to create a GitHub issue with your request</li>
-<li style="color: #800080;">A GitHub Actions workflow will process your request</li>
-<li style="color: #800080;">The workflow uses Gemini to convert your instructions into HTML/CSS/JS</li>
-<li style="color: #800080;">The changes are automatically committed to the repository</li>
-<li style="color: #800080;">This page will be updated to reflect your requested changes</li>
-</ol>
-<h2 style="color: #008000;">Example Instructions</h2>
-<ul style="color: #8B4513;">
-<li style="color: #800080;">"Add a photo gallery section with 3 placeholder images"</li>
-<li style="color: #800080;">"Change the background color to light blue and add a footer"</li>
-<li style="color: #800080;">"Create a navigation menu at the top with Home, About, and Contact links"</li>
-<li style="color: #800080;">"Add a contact form with name, email, and message fields"</li>
-</ul>
-<p style="color: #4B0082;"><strong style="color: #D2691E;">Note:</strong> Before using this page in production, remember to update the form action URL with your actual GitHub repository details (replace REPO_OWNER/REPO_NAME).</p>
-</div>
-<footer style="color: #4682B4;">
-<p style="color: #4B0082;">© 2024 LLM Editable Webpage. All rights reserved.</p>
-</footer>
-</body>
+<html>
+    
 </html>
