--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
 <html>
-    
+    <body>
+        <div style="margin: 20px 0; padding: 15px; background-color: #f8f9fa; border-radius: 5px; box-shadow: 0 2px 5px rgba(0,0,0,0.1); border: 1px solid #e9ecef;">
+            <h3 style="margin-top: 0; color: #0366d6;">Modify This Webpage</h3>
+            <form action="https://github.com/REPO_OWNER/REPO_NAME/issues/new" method="get" target="_blank">
+                <input type="hidden" name="labels" value="prompt">
+                <input type="text" name="body" placeholder="Enter your instructions..." style="width: 75%; padding: 10px; margin-right: 10px; border: 1px solid #ced4da; border-radius: 4px; font-size: 16px;" required>
+                <button type="submit" style="padding: 10px 15px; background-color: #0366d6; color: white; border: none; border-radius: 4px; font-size: 16px; cursor: pointer; transition: background-color 0.2s;">Submit</button>
+            </form>
+            <p style="font-size: 14px; color: #6c757d; margin-top: 10px;">Your request will be processed through GitHub Issues and applied automatically.</p>
+        </div>
+    </body>
 </html>
